--- a/templates/matrix/index.html.twig
+++ b/templates/matrix/index.html.twig
@@ -1,45 +1,90 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {% set matrixSize = matrix|length %}
     <div class="container">
-        <div class="row">
-            <div class="col-12 p-0" style="">
-                <div class="grid-container" style="grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
-                    <div class="cell border-0" style="position: sticky; top: 0"></div>
-                    {% for key, line in matrix %}
-                        <div class="cell cell-identity border-top-0 d-flex" style="position: sticky; top: -20px; background: #fff; z-index: 10000">
-                            <p class="mx-auto mb-2 member-detail rotate">
-                                <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
-                            </p>
-                        </div>
-                    {% endfor %}
-                    {% for key, line in matrix %}
-                        {% set newLine = true %}
-                        {% for el in line %}
-                            {% if newLine == true %}
-                                <div class="cell cell-identity d-flex border-start-0" style="position: sticky; left: -20px; background: #fff">
-                                    <p class="m-auto me-2 member-detail">
-                                        <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
-                                    </p>
-                                </div>
-                                {% set newLine = false %}
-                            {% endif %}
-                            {% if el.rate is defined %}
-                                {% set cellClass = 'no-vote' %}
-                                {% if el.nb_vote > 0 %}
-                                    {% set cellClass = 'rate-' ~ el.rate|default(null)|round(-1) %}
-                                {% endif %}
-                                <div class="cell{% if el|length == 0 %} empty{% endif %} {{ cellClass }}">
-                                    <span class="fw-bold">{{ el.rate|default(null)|round }}%</span>
-                                </div>
-                            {% else %}
-                                <div class="cell empty"></div>
-                            {% endif %}
-                        {% endfor %}
-                    {% endfor %}
-                </div>
+        <div class="row mb-5">
+            <div class="col-12">
+                <h3 class="text-center mb-5">
+                    {{ 'vote_information'|trans }}
+                </h3>
+                {{ form_start(form) }}
+                    {% set countryAttr = {'data-country': ''} %}
+                    {% set groupAttr = {'data-group': ''} %}
+
+                    {% if form.mapType.vars.value == 1 %}
+                        {% set countryAttr = countryAttr|merge({'style': 'display: none'}) %}
+                    {% elseif form.mapType.vars.value == 2 %}
+                        {% set groupAttr = groupAttr|merge({'style': 'display: none'}) %}
+                    {% else %}
+                        {% set groupAttr = groupAttr|merge({'style': 'display: none'}) %}
+                        {% set countryAttr = countryAttr|merge({'style': 'display: none'}) %}
+                    {% endif %}
+
+                    {{ form_row(form.mapType, {'attr': {'data-maptype': ''}}) }}
+                    {{ form_row(form.country, {'row_attr': countryAttr}) }}
+                    {{ form_row(form.group, {'row_attr': groupAttr}) }}
+                    <button type="submit" class="btn btn-primary">{{ 'compare'|trans }}</button>
+                {{ form_end(form) }}
             </div>
         </div>
+        {% if matrix is defined %}
+            {% set matrixSize = matrix|length %}
+
+            {% set param = [] %}
+            {% set queryParams = app.request.query.all %}
+            {% for paramName, paramValue in queryParams %}
+                {% set param = param|merge({(paramName): (paramValue)}) %}
+            {% endfor %}
+
+            <a href="{{ path('member-map-fullscreen', param) }}" target="_blank" class="btn btn-primary">{{ 'open_fullscreen'|trans }}</a>
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div class="grid-container" style="width: {{ 250 + matrixSize * 30 }}px; grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
+                        <div class="cell cell-hide border-0"></div>
+                        {% for key, line in matrix %}
+                            <div class="cell cell-identity cell-identity-top border-top-0">
+                                <p class="mx-auto mb-2 member-detail rotate">
+                                    <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
+                                </p>
+                            </div>
+                        {% endfor %}
+                        {% for key, line in matrix %}
+                            {% set newLine = true %}
+                            {% for el in line %}
+                                {% if newLine == true %}
+                                    <div class="cell cell-identity cell-identity-left border-start-0">
+                                        <p class="m-auto me-2 member-detail">
+                                            <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
+                                        </p>
+                                    </div>
+                                    {% set newLine = false %}
+                                {% endif %}
+                                {% if el.rate is defined %}
+                                    {% set cellClass = 'no-vote' %}
+                                    {% if el.nb_vote > 0 %}
+                                        {% set cellClass = 'rate-' ~ el.rate|round_down_5 %}
+                                    {% endif %}
+                                    <div class="cell{% if el|length == 0 %} empty{% endif %} {{ cellClass }}">
+                                        <span class="fw-bold">
+                                            {% if el.nb_vote == 0 %}
+                                                <small>No data</small>
+                                            {% else %}
+                                                <p class="mb-0 text-center">
+                                                    {{ el.rate|default(null)|round }}%
+                                                    <br>
+                                                    <small class="nb-vote">{{ 'vote_label'|trans({'nb': el.nb_vote}) }}</small>
+                                                </p>
+                                            {% endif %}
+                                        </span>
+                                    </div>
+                                {% else %}
+                                    <div class="cell empty"></div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
