--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,6 @@
+@import "tom-select/dist/css/tom-select.bootstrap5.css";
+@import 'bootstrap';
+
 :root {
     --bs-primary-rgb: 61, 81, 160;
     --bs-body-font-family: "Raleway", sans-serif;
