--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,11 @@
         <meta name="description" content="{{ 'meta.description'|trans }}"/>
         <link rel="icon" href="{{ asset('images/fav.webp') }}">
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
