--- a/templates/matrix/index.html.twig
+++ b/templates/matrix/index.html.twig
@@ -39,7 +39,7 @@
             <a href="{{ path('member-map-fullscreen', param) }}" target="_blank" class="btn btn-primary">{{ 'open_fullscreen'|trans }}</a>
             <div class="row">
                 <div class="col-12 p-0">
-                    <div class="grid-container" style="width: {{ 250 + matrixSize * 30 }}px; grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
+                    <div class="grid-container mt-3" style="width: {{ 250 + matrixSize * 30 }}px; grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
                         <div class="cell cell-hide border-0"></div>
                         {% for key, line in matrix %}
                             <div class="cell cell-identity cell-identity-top border-top-0">
