--- a/templates/matrix/fullscreen.html.twig
+++ b/templates/matrix/fullscreen.html.twig
@@ -7,9 +7,11 @@
                 <div class="grid-container" style="width: {{ 250 + matrixSize * 30 }}px; grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
                     <div class="cell cell-hide border-0"></div>
                     {% for key, line in matrix %}
+                        {% set member = attribute(members, key) %}
                         <div class="cell cell-identity cell-identity-top border-top-0">
                             <p class="mx-auto mb-2 member-detail rotate">
-                                <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
+                                <span class="mb-2 political-group-dot-color" {% if member.group.color is not null%}style="background: #{{ member.group.color }};"{% endif %}></span>
+                                <span class="member-name">{{ member.lastName }}</span> <small>({{ member.group.shortLabel }})</small>
                             </p>
                         </div>
                     {% endfor %}
@@ -17,9 +19,11 @@
                         {% set newLine = true %}
                         {% for el in line %}
                             {% if newLine == true %}
+                                {% set member = attribute(members, key) %}
                                 <div class="cell cell-identity cell-identity-left border-start-0">
                                     <p class="m-auto me-2 member-detail">
-                                        <span class="member-name">{{ attribute(members, key).lastName }}</span> <small>({{ attribute(members, key).group.shortLabel }})</small>
+                                        <span class="member-name">{{ member.lastName }}</span> <small>({{ member.group.shortLabel }})</small>
+                                        <span class="ms-2 political-group-dot-color" {% if member.group.color is not null%}style="background: #{{ member.group.color }};"{% endif %}></span>
                                     </p>
                                 </div>
                                 {% set newLine = false %}
