--- a/templates/matrix/fullscreen.html.twig
+++ b/templates/matrix/fullscreen.html.twig
@@ -6,23 +6,25 @@
             <div class="col-12 p-0 d-flex m-auto h-100">
                 <div class="grid-container" style="width: {{ 250 + matrixSize * 30 }}px; grid-template-columns: 175px repeat({{ matrixSize }}, auto); grid-template-rows: 175px repeat({{ matrixSize }}, auto);">
                     <div class="cell cell-hide border-0"></div>
-                    {% for key, line in matrix %}
-                        {% set member = attribute(members, key) %}
+                    {% for line in matrix|first %}
+                        {% set member = line.memberY %}
                         <div class="cell cell-identity cell-identity-top border-top-0">
                             <p class="mx-auto mb-2 member-detail rotate">
                                 <span class="mb-2 political-group-dot-color" {% if member.group.color is not null%}style="background: #{{ member.group.color }};"{% endif %}></span>
-                                <span class="member-name">{{ member.lastName }}</span> <small>({{ member.group.shortLabel }})</small>
+                                <span class="member-name">{{ member.lastName }}</span>
+                                <small>({{ member.group.shortLabel }})</small>
                             </p>
                         </div>
                     {% endfor %}
                     {% for key, line in matrix %}
                         {% set newLine = true %}
-                        {% for el in line %}
+                        {% for key2, el in line %}
                             {% if newLine == true %}
-                                {% set member = attribute(members, key) %}
+                                {% set member = el.memberX %}
                                 <div class="cell cell-identity cell-identity-left border-start-0">
                                     <p class="m-auto me-2 member-detail">
-                                        <span class="member-name">{{ member.lastName }}</span> <small>({{ member.group.shortLabel }})</small>
+                                        <span class="member-name">{{ member.lastName }}</span>
+                                        <small>({{ member.group.shortLabel }})</small>
                                         <span class="ms-2 political-group-dot-color" {% if member.group.color is not null%}style="background: #{{ member.group.color }};"{% endif %}></span>
                                     </p>
                                 </div>
@@ -34,17 +36,17 @@
                                     {% set cellClass = 'rate-' ~ el.rate|round_down_5 %}
                                 {% endif %}
                                 <div class="cell{% if el|length == 0 %} empty{% endif %} {{ cellClass }}">
-                                    <span class="fw-bold">
-                                        {% if el.nb_vote == 0 %}
-                                            <small>No data</small>
-                                        {% else %}
-                                            <p class="mb-0 text-center">
-                                                {{ el.rate|default(null)|round }}%
-                                                <br>
-                                                <small class="nb-vote">{{ 'vote_label'|trans({'nb': el.nb_vote}) }}</small>
-                                            </p>
-                                        {% endif %}
-                                    </span>
+                                        <span class="fw-bold">
+                                            {% if el.nb_vote == 0 %}
+                                                <small>No data</small>
+                                            {% else %}
+                                                <p class="mb-0 text-center">
+                                                    {{ el.rate|default(null)|round }}%
+                                                    <br>
+                                                    <small class="nb-vote">{{ 'vote_label'|trans({'nb': el.nb_vote}) }}</small>
+                                                </p>
+                                            {% endif %}
+                                        </span>
                                 </div>
                             {% else %}
                                 <div class="cell empty"></div>
