--- a/templates/member/list.html.twig
+++ b/templates/member/list.html.twig
@@ -8,17 +8,21 @@
                 <div class="filter my-5">
                     {{ form_start(filter, {'attr' : {'data-mp-filter': ''}}) }}
                     <div class="row">
-                        <div class="col">
+                        <div class="col-12 col-md-6">
                             {{ form_label(filter.group, null, {'label_attr': {'class': 'col-sm-12'}}) }}
                             {{ form_widget(filter.group) }}
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-md-6">
                             {{ form_label(filter.country, null, {'label_attr': {'class': 'col-sm-12'}}) }}
                             {{ form_widget(filter.country) }}
                         </div>
-                        <div class="col">
+                        <div class="col-12 col-md-6">
                             {{ form_label(filter.party, null, {'label_attr': {'class': 'col-sm-12'}}) }}
                             {{ form_widget(filter.party) }}
+                        </div>
+                        <div class="col-12 col-md-6">
+                            {{ form_label(filter.mp_status, null, {'label_attr': {'class': 'col-sm-12'}}) }}
+                            {{ form_widget(filter.mp_status) }}
                         </div>
                     </div>
                     {{ form_end(filter) }}
@@ -29,11 +33,19 @@
                            {% if member.country is not null %}data-mp-country="{{ member.country.code }}"{% endif %}
                             {% if member.group is not null %}data-mp-group="{{ member.group.code }}"{% endif %}
                             {% if member.party is not null %}data-mp-party="{{ member.party.id }}"{% endif %}
+                            {% if member.party is not null %}data-mp-status="{{ member.isActive ? 1 : 2 }}"{% endif %}
                         >
                             <div class="card h-100">
                                 <div class="card-body">
-                                    <img src="https://howtheyvote.eu/{{ member.thumb }}" class="img-fluid rounded-3 d-block m-auto w-50" alt="">
+                                    <div class="member-thumb lazyload">
+                                        <img data-src="https://howtheyvote.eu/{{ member.thumb }}" class="img-fluid lazy" alt="">
+                                    </div>
                                     <h2 class="h6 text-center mt-3">{{ member.firstName }} {{ member.lastName }}</h2>
+                                    {% if member.isActive %}
+                                        <div class="badge text-bg-success">{{ 'mp_status_list.active'|trans }}</div>
+                                    {% else %}
+                                        <div class="badge text-bg-secondary">{{ 'mp_status_list.retired'|trans }}</div>
+                                    {% endif %}
                                     <p class="m-0">{{ member.group.label }}</p>
                                     {% if member.country is not null or member.party is not null %}
                                         <p class="m-0 d-flex flex-column">
