--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body class="{{ bodyclass|default('') }}">
-        <header>
+        <header class="main-header">
             {{ include('_header.html.twig') }}
         </header>
         <main>
