--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -19,6 +19,8 @@
                             <ul class="dropdown-menu fade-up">
                                 <li><a class="dropdown-item" href="{{ path('member-to-member') }}">MP comparison</a></li>
                                 <li><a class="dropdown-item" href="{{ path('member-map') }}">MP correlation matrix</a></li>
+                                <li><a class="dropdown-item" href="{{ path('absenteeism_overview') }}">Absenteeism overview</a></li>
+                                <li><a class="dropdown-item" href="{{ path('absenteeism_country') }}">Absenteeism by country</a></li>
                             </ul>
                         </div>
                     </li>
